...
        //Redondear foto del logo
        logoFotoView.layer.cornerRadius = logoFotoView.bounds.height / 2
                logoFotoView.clipsToBounds = true
        
        // Configura el identificador de accesibilidad en el UILabel para verificar la vista principal
        mainViewLabel.text = "Bienvenido a la vista principal"
        mainViewLabel.accessibilityIdentifier = "MainViewLabelIdentifier"
        
        // Configura el identificador de accesibilidad en la vista principal
        view.accessibilityIdentifier = "mainView"
        
        tableView.dataSource = self
        tableView.delegate = self
        
        tableView.register(UINib(nibName: "CustomTableViewCell", bundle: nil), forCellReuseIdentifier: "customTableVC")
        
...
